--- a/api/build.gradle
+++ b/api/build.gradle
@@ -29,6 +29,8 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
+
+	compileOnly 'io.netty:netty-resolver-dns-native-macos:4.1.94.Final:osx-aarch_64'
 }
 
 tasks.named('test') {
